--- a/14_10_2016/Mobile/index.html
+++ b/14_10_2016/Mobile/index.html
@@ -5,7 +5,7 @@
     <script src="js/Shape.js" type="text/javascript"></script>
     <script src="js/Mobile.js?v=1.0" type="text/javascript"></script>
   </head>
-  <body data-IP="10.192.234.114">
+  <body data-IP="localhost">
       <canvas id="canvas"></canvas>
   </body>
 </html>
