--- a/Demo/App/index.html
+++ b/Demo/App/index.html
@@ -8,7 +8,7 @@
     <script src="js/App.js" type="text/javascript"></script>
     <script src="js/SocketConnection.js" type="text/javascript"></script>
   </head>
-  <body data-IP="localhost">
+  <body data-IP="10.192.232.173">
     <div id="container"></div>
     <div id="overlay"><canvas id="canvas"></canvas></div>
   </body>
